Fix the spacing in the title of the main page

--- a/style/home.css
+++ b/style/home.css
@@ -21,7 +21,7 @@ body{
 }
 
     #title .content{
-        padding: 0 10% 0 7%;
+        padding: 0 10% 0 10%;
         display: grid;
         grid-template-columns: 35% 1fr;
     }
@@ -41,6 +41,7 @@ body{
 
     #title .text-part{
         padding: 1em 3em;
+        padding-top: 2em;
     }
 
         #title .text-part .pre-title{
@@ -48,6 +49,7 @@ body{
             justify-content: space-between;
             width: 97%;
             margin: 0 0 1em auto;
+            padding: 1em 0;
             font-size: clamp(2px, 1.2rem, 1.2vw);
 
             font-weight: bold;
@@ -71,13 +73,13 @@ body{
 
             #title .text-part .line{
                 width: 40%;
-                margin: 1em 0 1em auto;
+                margin: 1.5em 0 1.5em auto;
                 border-bottom: .2vw solid white;
             }
 
             #title .description{
                 max-width: 65ch;
-                font-size: clamp(4px, 1rem, 1.1vw);
+                font-size: clamp(4px, 1.3rem, 1.2vw);
                 margin: 1em 0 1em auto;
                 text-shadow: -1px 1px 0px rgba(0, 0, 0, 0.103);
                 color: var(--darkerPurple);
